--- a/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Governance centre",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 34,
+      "line": 41,
       "column": 25,
-      "index": 2000
+      "index": 2490
     },
     "end": {
-      "line": 37,
+      "line": 44,
       "column": 3,
-      "index": 2104
+      "index": 2594
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 38,
+      "line": 45,
       "column": 18,
-      "index": 2124
+      "index": 2614
     },
     "end": {
-      "line": 41,
+      "line": 48,
       "column": 3,
-      "index": 2223
+      "index": 2713
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Learn more About Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 42,
+      "line": 49,
       "column": 28,
-      "index": 2253
+      "index": 2743
     },
     "end": {
-      "line": 45,
+      "line": 52,
       "column": 3,
-      "index": 2370
+      "index": 2860
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Delegate to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 46,
+      "line": 53,
       "column": 30,
-      "index": 2402
+      "index": 2892
     },
     "end": {
-      "line": 49,
+      "line": 56,
       "column": 3,
-      "index": 2512
+      "index": 3002
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 50,
+      "line": 57,
       "column": 36,
-      "index": 2550
+      "index": 3040
     },
     "end": {
-      "line": 54,
+      "line": 61,
       "column": 3,
-      "index": 2755
+      "index": 3245
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 55,
+      "line": 62,
       "column": 22,
-      "index": 2779
+      "index": 3269
     },
     "end": {
-      "line": 58,
+      "line": 65,
       "column": 3,
-      "index": 2870
+      "index": 3360
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!You are choosing not to cast a vote on all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 59,
+      "line": 66,
       "column": 28,
-      "index": 2900
+      "index": 3390
     },
     "end": {
-      "line": 62,
+      "line": 69,
       "column": 3,
-      "index": 3065
+      "index": 3555
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!No confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 63,
+      "line": 70,
       "column": 27,
-      "index": 3094
+      "index": 3584
     },
     "end": {
-      "line": 66,
+      "line": 73,
       "column": 3,
-      "index": 3196
+      "index": 3686
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!You are expressing a lack of trust for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 67,
+      "line": 74,
       "column": 33,
-      "index": 3231
+      "index": 3721
     },
     "end": {
-      "line": 70,
+      "line": 77,
       "column": 3,
-      "index": 3401
+      "index": 3891
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!DRep Key",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 71,
+      "line": 78,
       "column": 11,
-      "index": 3414
+      "index": 3904
     },
     "end": {
-      "line": 74,
+      "line": 81,
       "column": 3,
-      "index": 3495
+      "index": 3985
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Delegating to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 75,
+      "line": 82,
       "column": 21,
-      "index": 3518
+      "index": 4008
     },
     "end": {
-      "line": 78,
+      "line": 85,
       "column": 3,
-      "index": 3621
+      "index": 4111
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Abstaining",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 79,
+      "line": 86,
       "column": 14,
-      "index": 3637
+      "index": 4127
     },
     "end": {
-      "line": 82,
+      "line": 89,
       "column": 3,
-      "index": 3723
+      "index": 4213
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Delegate voting to {drepID}",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 83,
+      "line": 90,
       "column": 24,
-      "index": 3749
+      "index": 4239
     },
     "end": {
-      "line": 86,
+      "line": 93,
       "column": 3,
-      "index": 3862
+      "index": 4352
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Select abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 87,
+      "line": 94,
       "column": 17,
-      "index": 3881
+      "index": 4371
     },
     "end": {
-      "line": 90,
+      "line": 97,
       "column": 3,
-      "index": 3974
+      "index": 4464
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Select no confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 91,
+      "line": 98,
       "column": 22,
-      "index": 3998
+      "index": 4488
     },
     "end": {
-      "line": 94,
+      "line": 101,
       "column": 3,
-      "index": 4102
+      "index": 4592
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Operations",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 95,
+      "line": 102,
       "column": 14,
-      "index": 4118
+      "index": 4608
     },
     "end": {
-      "line": 98,
+      "line": 105,
       "column": 3,
-      "index": 4204
+      "index": 4694
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Enter a Drep ID and password to sign this transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 99,
+      "line": 106,
       "column": 27,
-      "index": 4233
+      "index": 4723
     },
     "end": {
-      "line": 102,
+      "line": 109,
       "column": 3,
-      "index": 4375
+      "index": 4865
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Drep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 103,
+      "line": 110,
       "column": 10,
-      "index": 4387
+      "index": 4877
     },
     "end": {
-      "line": 106,
+      "line": 113,
       "column": 3,
-      "index": 4466
+      "index": 4956
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Thank you for participating in Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 107,
+      "line": 114,
       "column": 28,
-      "index": 4496
+      "index": 4986
     },
     "end": {
-      "line": 110,
+      "line": 117,
       "column": 3,
-      "index": 4627
+      "index": 5117
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!This transaction can take a while!",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 111,
+      "line": 118,
       "column": 32,
-      "index": 4661
+      "index": 5151
     },
     "end": {
-      "line": 114,
+      "line": 121,
       "column": 3,
-      "index": 4789
+      "index": 5279
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 115,
+      "line": 122,
       "column": 25,
-      "index": 4816
+      "index": 5306
     },
     "end": {
-      "line": 119,
+      "line": 126,
       "column": 3,
-      "index": 5044
+      "index": 5534
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Go to Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 120,
+      "line": 127,
       "column": 18,
-      "index": 5064
+      "index": 5554
     },
     "end": {
-      "line": 123,
+      "line": 130,
       "column": 3,
-      "index": 5160
+      "index": 5650
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Find a DRep here",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 124,
+      "line": 131,
       "column": 16,
-      "index": 5178
+      "index": 5668
     },
     "end": {
-      "line": 127,
+      "line": 134,
       "column": 3,
-      "index": 5272
+      "index": 5762
     }
   },
   {
@@ -349,14 +349,44 @@
     "defaultMessage": "!!!Review the selections carefully to assign yourself a Governance Status",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 128,
+      "line": 135,
       "column": 17,
-      "index": 5291
+      "index": 5781
     },
     "end": {
-      "line": 131,
+      "line": 138,
       "column": 3,
-      "index": 5440
+      "index": 5930
+    }
+  },
+  {
+    "id": "components.governance.actionYouHaveSelectedTxPending",
+    "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status.",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 139,
+      "column": 34,
+      "index": 5966
+    },
+    "end": {
+      "line": 142,
+      "column": 3,
+      "index": 6122
+    }
+  },
+  {
+    "id": "components.governance.actionYouHaveSelected",
+    "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 143,
+      "column": 25,
+      "index": 6149
+    },
+    "end": {
+      "line": 147,
+      "column": 3,
+      "index": 6363
     }
   }
 ]
