Add translations to json file

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -573,6 +573,33 @@
   "components.catalyst.step6.note": "Keep it — you won’t be able to access this code after tapping on Complete.",
   "components.catalyst.step6.secretCode": "Secret Code",
   "components.catalyst.title": "Register to vote",
+  "components.governance.governanceCentreTitle": "Governance centre",
+  "components.governance.confirmTxTitle": "Confirm transaction",
+  "components.governance.learnMoreAboutGovernance": "Learn more About Governance",
+  "components.governance.actionDelegateToADRepTitle": "Delegate to a DRep",
+  "components.governance.actionDelegateToADRepDescription": "You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
+  "components.governance.actionAbstainTitle": "Abstain",
+  "components.governance.actionAbstainDescription": "You are choosing not to cast a vote on all proposals now and in the future.",
+  "components.governance.actionNoConfidenceTitle": "No confidence",
+  "components.governance.actionNoConfidenceDescription": "You are expressing a lack of trust for all proposals now and in the future.",
+  "components.governance.drepKey": "DRep Key",
+  "components.governance.delegatingToADRep": "Delegating to a DRep",
+  "components.governance.abstaining": "Abstaining",
+  "components.governance.delegateVotingToDRep": "Delegate voting to {drepID}",
+  "components.governance.selectAbstain": "Select abstain",
+  "components.governance.selectNoConfidence": "Select no confidence",
+  "components.governance.operations": "Operations",
+  "components.governance.enterADrepIDAndPassword": "Enter a Drep ID and password to sign this transaction",
+  "components.governance.drepID": "Drep ID",
+  "components.governance.thankYouForParticipating": "Thank you for participating in Governance",
+  "components.governance.thisTransactionCanTakeAWhile": "This transaction can take a while!",
+  "components.governance.participationBenefits": "Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
+  "components.governance.goToGovernance": "Go to Governance",
+  "components.governance.findDRepHere": "Find a DRep here",
+  "components.governance.reviewActions": "Review the selections carefully to assign yourself a Governance Status",
+  "components.governance.actionYouHaveSelectedTxPending": "You have selected <b>{action}</b> as your governance status.",
+  "components.governance.actionYouHaveSelected": "You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
+  "components.governance.changeDRep": "Change DRep",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
