--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -600,6 +600,9 @@
   "components.governance.actionYouHaveSelectedTxPending": "You have selected <b>{action}</b> as your governance status.",
   "components.governance.actionYouHaveSelected": "You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
   "components.governance.changeDRep": "Change DRep",
+  "components.governance.confirm": "Confirm",
+  "components.governance.transactionDetails": "Transaction details",
+  "components.governance.total": "Total",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
